syntax = "proto3";

package biconom.types;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "biconom/types/confirmation.proto";
import "biconom/types/google_authenticator_policy.proto";

// GoogleAuthenticator представляет собой настройки двухфакторной аутентификации (2FA) для пользователя.
// Эта модель НЕ содержит секретный ключ из соображений безопасности.
message GoogleAuthenticator {
	message List {
		repeated GoogleAuthenticator items = 1;
	}

	bool enabled = 1;		                			    // Текущий статус настройки 2FA
	optional biconom.types.Confirmation confirmation = 2;	// Текущее состояние запроса на изменение настроек 2FA
	google.protobuf.Timestamp created_at = 3;
	google.protobuf.Timestamp updated_at = 4;
}
