syntax = "proto3";

package biconom.types;

import "google/protobuf/timestamp.proto";

message PasswordPolicy {
	message Id {
		uint32 id = 1; // Уникальный идентификатор политики паролей
	}

	message List {
		repeated PasswordPolicy items = 1;
	}

	message PasswordReport {
		bool is_valid = 1;
		bool empty = 2;
		bool too_short = 3;
		bool too_long = 4;
		bool group_satisfied = 5;
		repeated string forbidden = 6;
		optional string denied = 7;
	}

	message Config {
		// Классы символов, используемые в паролях
		enum Character {
			DIGITS    = 0; // Цифры: 0–9
			LOWERCASE = 1; // Строчные латинские буквы: a–z
			UPPERCASE = 2; // Заглавные латинские буквы: A–Z
			SPECIAL   = 3; // Спецсимволы: !"#$%&'()*+,-./:;<=>?@[\\]^_`{|}~
			EMOJI     = 4; // Эмодзи: Unicode ≥ 4 байт
		}

		uint32 min_length = 1; // Минимально допустимая длина пароля
		uint32 max_length = 2; // Максимально допустимая длина пароля

		// Битовая маска разрешённых классов символов.
		// Например: (1 << DIGITS) | (1 << UPPERCASE) => 0b000101
		uint32 allowed_bit_mask = 3;

		// Требуемые группы: хотя бы одна из групп должна быть полностью удовлетворена.
		// Например: [0b101] означает DIGITS+UPPERCASE;
		//           [0b101, 0b110] означает: либо (DIGITS+UPPERCASE), либо (LOWERCASE+UPPERCASE)
		repeated uint32 required_any_of_bit_mask = 4;
	}

	uint32 id = 1; // ID политики
	Config config = 2; // Настройки политики
	google.protobuf.Timestamp created_at = 3; // Дата создания
}
